KUBERNETES/ingress/traefik/simple-ingress-routes/01-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.mahinraza.online`)
      kind: Rule
      services:
        - name: nginx-svc-blue
          port: 80
  tls:
    secretName: wildcard-mahinraza-online
