KUBERNETES/ingress/traefik/simple-ingress-routes/05-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.mahinraza.online`) && HeaderRegexp(`From`, `.*example.*`)
      kind: Rule
      services:
        - name: nginx-svc-blue
          port: 80
  tls:
    secretName: wildcard-mahinraza-online

# PASS
# curl -k -H "From: test@example.com" https://nginx.mahinraza.online
# <h1>I am <font color=BLUE>BLUE</font></h1>

# PASS
# curl -k -H "From: test@example.org" https://nginx.mahinraza.online
# <h1>I am <font color=BLUE>BLUE</font></h1>

# PASS
# curl -k -H "From: test-failed@example.com" https://nginx.mahinraza.online
# <h1>I am <font color=BLUE>BLUE</font></h1>

# FAIL
# curl -k https://nginx.mahinraza.online
# 404 page not found

# FAIL
# curl -k -H "From: test-failed@demo.com" https://nginx.mahinraza.online
# 404 page not found
