KUBERNETES/ingress/traefik/simple-ingress-routes/07-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: host-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`host.example.com`)
      kind: Rule
      services:
        - name: demo-service
          port: 80
