KUBERNETES/ingress/traefik/simple-ingress-routes/11-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: path-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`path.example.com`) && Path(`/products`)
      kind: Rule
      services:
        - name: demo-service
          port: 80

# /products
