KUBERNETES/ingress/traefik/simple-ingress-routes/13-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: method-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`method.example.com`) && Method(`POST`)
      kind: Rule
      services:
        - name: demo-service
          port: 80

# curl -X POST \
#   -H "Host: method.example.com" \
#   http://<TRAEFIK-IP>/
