KUBERNETES/ingress/traefik/simple-ingress-routes/16-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: query-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`query.example.com`) && Query(`mobile`, `true`)
      kind: Rule
      services:
        - name: demo-service
          port: 80

# curl \
#   -H "Host: query.example.com" \
#   "http://<TRAEFIK-IP>/search?mobile=true"
