KUBERNETES/ingress/traefik/simple-ingress-routes/17-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: query-regexp-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`query-regexp.example.com`) && QueryRegexp(`mobile`, `^(true|yes)$`)
      kind: Rule
      services:
        - name: demo-service
          port: 80

# ?mobile=true
# ?mobile=yes
