KUBERNETES/ingress/traefik/simple-ingress-routes/19-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: and-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`and.example.com`) && PathPrefix(`/admin`)
      kind: Rule
      services:
        - name: demo-service
          port: 80
