KUBERNETES/ingress/traefik/simple-ingress-routes/20-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: or-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.example.com`) || Host(`api.example.org`)
      kind: Rule
      services:
        - name: demo-service
          port: 80
