KUBERNETES/ingress/traefik/simple-ingress-routes/21-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: not-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`not.example.com`) && !Path(`/admin`)
      kind: Rule
      services:
        - name: demo-service
          port: 80

# This matches:
# /
# /users
# /products

# but not:
# /admin
