KUBERNETES/ingress/traefik/simple-ingress-routes/22-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: parentheses-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.example.com`) && (PathPrefix(`/v1`) || PathPrefix(`/v2`))
      kind: Rule
      services:
        - name: demo-service
          port: 80
