KUBERNETES/ingress/traefik/simple-ingress-routes/23-ingressroute.yaml
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: priority-generic
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^[a-z]+\.example\.com$`)
      kind: Rule
      priority: 100
      services:
        - name: demo-service
          port: 80

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: priority-specific
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`foobar.example.com`)
      kind: Rule
      priority: 200
      services:
        - name: demo-service
          port: 80

# foobar.example.com
#         ↓
# priority-specific
#         ↓
# demo-service
