KUBERNETES/ingress/traefik/simple-ingress-routes/24-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: real-api-example
  namespace: traefik-lab
spec:
  entryPoints:
    - web
  routes:

    # GET /api/users
    - match: >
        Host(`api.example.com`) &&
        PathPrefix(`/api`) &&
        Method(`GET`)
      kind: Rule
      priority: 100
      services:
        - name: demo-service
          port: 80

    # Admin requests with a specific header
    - match: >
        Host(`api.example.com`) &&
        PathPrefix(`/admin`) &&
        Method(`GET`) &&
        Header(`X-Role`, `admin`)
      kind: Rule
      priority: 200
      services:
        - name: demo-service
          port: 80
