KUBERNETES/ingress/traefik/simple-ingress-routes/25-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-red
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    # Main site
    - match: Host(`nginx-red.mahinraza.online`)
      kind: Rule
      services:
        - name: nginx-red
          port: 80

    # API
    - match: Host(`nginx-red.mahinraza.online`) && PathPrefix(`/api`)
      kind: Rule
      priority: 100
      services:
        - name: nginx-red-api
          port: 8080
  tls: {}
